src/objects/SPE_ScoreCard__c.object
<CustomObject>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>All Project</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>AF AWCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AMC 2G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL VODAFONE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL M4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL PLUS CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ OOREDOO ALGERIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DZ.ORASCOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALGERIA TELECOM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTI MOVIL ARG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TELEFONICA PANAMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR CTI MOVIL 3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR CABLEVISION NGN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR TELECOM PERSONAL 3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR TELECOM PDH/SDH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR CLARO ARGENTINA SWAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR TECO TDM EVOLUTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NEXTEL ARGENTINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AM ORANGE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OPTUS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VODAFONE AUSTRALIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU DOT DTRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU NBN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT H3G OLD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT NETCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT CALDERA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT TMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT H3G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT A1 AUSTRIA CARE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT ORANGE AUSTRIA CARE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Market</label>
        <picklist>
            <picklistValues>
                <fullName>All CO Region</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CHINA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAPAN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ScorecardTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scorecard Template</label>
        <referenceTo>SPE_ScorecardTemplate__c</referenceTo>
        <relationshipLabel>ScoreCards</relationshipLabel>
        <relationshipName>ScoreCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScorecardTitle__c</fullName>
        <formula>IF(ISBLANK(ScorecardTracker__r.ScorecardGenerator__r.AdhocScorecardName__c),Name,ScorecardTracker__r.ScorecardGenerator__r.AdhocScorecardName__c)</formula>
        <label>Scorecard Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScorecardTracker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scorecard Tracker</label>
        <referenceTo>SPE_ScorecardTracker__c</referenceTo>
        <relationshipLabel>ScoreCards</relationshipLabel>
        <relationshipName>ScoreCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Scorecard_Code__c</fullName>
        <displayFormat>Sc-{0000}</displayFormat>
        <label>Scorecard sequential Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Scorecard_Sequential_ID__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp;Id, Scorecard_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scorecard Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scorecard_Visual__c</fullName>
        <label>Scorecard Visual</label>
        <picklist>
            <picklistValues>
                <fullName>Traditional Scorecard</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SorecardGenerator__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; +  ScorecardTracker__r.ScorecardGenerator__c ,  ScorecardTracker__r.ScorecardGenerator__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sorecard Generator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sorecard_Generator_Description__c</fullName>
        <formula>ScorecardTracker__r.Scorecard_Generator_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Scorecard Generator Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SubRegion__c</fullName>
        <label>Market Unit</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>All CO Subregion</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>EE-RUB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JAPAN-JP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEE-CE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEE-CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEE-IB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEE-IM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEE-MED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEE-TCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WE-GP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WE-N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WE-NOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WE-UI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WE-W</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>INDIA-IND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAT-AND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAT-BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAT-MCA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LAT-S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA-CEWA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA-KSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA-LGIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA-NA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA-SA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MEA-SKIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAM-CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NAM-US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC-ANO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC-ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC-ASO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Enterprise ID</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.ParentId</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ScoreCards</relationshipLabel>
        <relationshipName>ScoreCards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>isAutoDistributionON__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAutoDistributionON</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isExecute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isExecute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isInternalScorecard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isInternalScorecard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isScoreGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isScoreGenerated</label>
        <type>Checkbox</type>
    </fields>
    <label>ScoreCard</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Scorecard_Code__c</columns>
        <columns>NAME</columns>
        <columns>SorecardGenerator__c</columns>
        <columns>ScorecardTracker__c</columns>
        <columns>Stage__c</columns>
        <columns>IsAdhoc__c</columns>
        <columns>AggregationType__c</columns>
        <columns>Aggregation_Period__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>StartDate__c</columns>
        <columns>EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Score Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ScoreCards</pluralLabel>
    <recordTypes>
        <fullName>Adhoc_Scorecard_Record_Type</fullName>
        <active>true</active>
        <label>Adhoc Scorecard Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Stage_Restrictions</fullName>
        <active>false</active>
        <errorConditionFormula>ISPICKVAL( Stage__c , &apos;Published&apos;)&amp;&amp; Approver__c =&apos;&apos;</errorConditionFormula>
        <errorMessage>Please select a Approver</errorMessage>
    </validationRules>
</CustomObject>